# context-compressor

./: .gitignore  README.md  mcp-config.example.json  pyproject.toml  walkthrough.md
docs/: OWL_TASK.md
src/context_compressor/: __init__.py  compressor.py  lclm_encoder.py  server.py  types.py
tests/: test_compressor.py  test_embedding_search.py  test_server.py
